cmake_minimum_required(VERSION 3.29)
project(DSA_in_C__)

set(CMAKE_CXX_STANDARD 20)

add_executable(DSA_in_C__ " AVL_Tree.cpp"
        Lecture_54.cpp
        Lecture_62.cpp
        Lecture_25_Intro_pointer.cpp
        Lecture_26_array_pointer.cpp
        Lecture_27_double_pointer.cpp
        Lecture_31_32_recursion.cpp
        Lecture_33.cpp
        Lecture_34_string_recursion.cpp
        "Lecture_35_36_merge_and_quick_sort .cpp"
        Lecture_12_Binary_Search.cpp
        Lecture_13.cpp
        Lecture_20.cpp
        Lecture_63.cpp
        Lecture_37_38_39.cpp
        Lecture_42_OOPs.cpp
        Lecture_43_OPPs2.cpp
        Lecture_55.cpp
        Lecture_56.cpp
        Lecture_57.cpp
        Lecture_60.cpp
        Lecture_61.cpp
        lecture_64.cpp
        Lecture_69.cpp
        Lecture_70.cpp
        math.cpp
        Lecture_65.cpp
        cmake-build-debug/Lecture_66.cpp
        Lecture_28.cpp
        Lecture_74.cpp
        Lecture71.cpp
        BST.h
        Lecture85.cpp
        lecture_101.cpp
        Lecture_75.cpp
        tree.h
)
